# FODS-CP_Sem-2

./: .gitignore  README.md  onnx
Sentiment Analysis/: classify.py  requirements.txt  train.py
cpp/: CMakeLists.txt
cpp/src/: main.cpp  playlist.cpp  playlist.h
data/: sample_lyrics.txt  songs.csv
docs/: design.md
web/backend/: app.py  requirements.txt
web/backend/routes/: __init__.py  classify_route.py  playlist_route.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: App.jsx  api.js  components
